Add monitoring, email performance enhancements, and security configuration
- Integrated Prometheus and Grafana for monitoring.
- Improved IMAP email fetching with SSL/TLS fallback handling and read/write timeout configuration.
- Introduced application constants for shared messages and configurations.
- Secured Spring Boot actuator endpoints with basic authentication.
- Enhanced latency tracking with micrometer metrics in `AnalysisService`.
- Updated `docker-compose` for new monitoring services and MySQL metrics exporter.
- Upgraded Maven dependencies and plugins for encoding, validation, and Prometheus registry.